Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Vocabularies: avoid duplicates in empty key wrapper 
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 