@@ -6,7 +6,8 @@ New features
 -
 Bug fixes
 ~~~~~~~~~
-- Vocabularies: avoid duplicates in empty key wrapper 
+- Vocabularies: avoid duplicates in empty key wrapper.
+- Cleanup : more legible code in CPSSchemas.utils.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
